--- a/prisonersDilemnaWeb/games/templates/games/createPlayer.html
+++ b/prisonersDilemnaWeb/games/templates/games/createPlayer.html
@@ -8,8 +8,11 @@
 </p>
 <form action = "{% url 'games:addPlayerUpdater' %}" method="post">
     {% csrf_token %}
-      <textarea name="text" class="codeBox" id="code">
-def nextMove(previousMoves):
+    <label for="playerName" style="margin: 10px;">Name: </label>
+    <input type="text" name="playerName">
+    <p></p>
+      <textarea name="code" class="codeBox">
+def nextMove(theirMoves, myMoves):
     </textarea>
       <p></p>
       <input type="submit" value="save">
@@ -21,7 +24,7 @@ def nextMove(previousMoves):
     }
 
     textAreaHandler = function(e) {
-        
+        //autoindenting to the same indentation as previous line
         if (e.key === 'Enter') {
             e.preventDefault()
             let start = this.selectionStart;
@@ -36,12 +39,19 @@ def nextMove(previousMoves):
                     break;
                 }
             }
-            console.log(currentLine)
             let indent = lines[currentLine].match(/^\s*/)[0];
             this.value = this.value.slice(0, start) + '\n' + indent + this.value.slice(end);
             this.selectionStart = start + indent.length + 1;
             this.selectionEnd = end + indent.length + 1;
-        }
+            //Tab indenting as 4 spaces
+        } else if (e.key === 'Tab') {
+        e.preventDefault();
+        let start = this.selectionStart;
+        let end = this.selectionEnd;
+        this.value = this.value.slice(0, start) + '    ' + this.value.slice(end);
+        this.selectionStart = start + 4;
+        this.selectionEnd = end + 4;
+    }
     };
 </script>
 
