--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/home.html
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/home.html
@@ -17,6 +17,6 @@
   <p>You are not logged in</p>
   <a href="{% url 'login' %}">Log In</a>
   <p></p>
-  <a href="{% url 'signup' %}">Sign Up</a>
+  <a href="{% url 'accounts:signup' %}">Sign Up</a>
 {% endif %}
 {% endblock %}
