Player detail view added

--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/base.html
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/base.html
@@ -13,9 +13,9 @@
         <li class="navBar"><a class="navBar" href="accounts/login">Login</a></li>
         <li class="navBar"><a class="navBar" href="accounts/login">Login</a></li>
     </ul>
-  <main>
-    {% block content %}
-    {% endblock %}
+  <main style="margin: 8px;">
+      {% block baseContent %}
+      {% endblock %}
   </main>
 </body>
 </html>
