--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/signup.html
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/signup.html
@@ -2,7 +2,7 @@
 
 {% block title %}Sign Up{% endblock %}
 
-{% block content %}
+{% block baseContent %}
   <h2>Sign up</h2>
   <form method="post">
     {% csrf_token %}
