--- a/prisonersDilemnaWeb/games/templates/games/playerDetail.html
+++ b/prisonersDilemnaWeb/games/templates/games/playerDetail.html
@@ -10,6 +10,24 @@
     <li>times defected: {{player.timesD}}</li>
 </ul>
 <a href= {% url "games:playRounds" player.id%}>Play rounds</a>
+<p></p>
+
+<div class="grid-container">
+    <div class="grid-item">1</div>
+    <div class="grid-item">2</div>
+    <div class="grid-item">3</div>  
+    <div class="grid-item">4</div>
+    <div class="grid-item">5</div>
+    <div class="grid-item">6</div>  
+    <div class="grid-item">7</div>
+    <div class="grid-item">8</div>
+  </div>
+<ul>
+    {% for match in player.matches.all %}
+    <li>
+    </li>
+    {% endfor %}
+</ul>
 
 
 {% endblock %}
