--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/static/css/style.css
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/static/css/style.css
@@ -45,3 +45,18 @@ li.navBar {
     height: 50vh;
     margin: 5px;
 }
+
+.grid-container {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: auto auto;
+    background-color: gray;
+    padding: 5px;
+  }
+  .grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
