--- a/prisonersDilemnaWeb/games/templates/games/playerDetail.html
+++ b/prisonersDilemnaWeb/games/templates/games/playerDetail.html
@@ -12,22 +12,16 @@
 <a href= {% url "games:playRounds" player.id%}>Play rounds</a>
 <p></p>
 
-<div class="grid-container">
-    <div class="grid-item">1</div>
-    <div class="grid-item">2</div>
-    <div class="grid-item">3</div>  
-    <div class="grid-item">4</div>
-    <div class="grid-item">5</div>
-    <div class="grid-item">6</div>  
-    <div class="grid-item">7</div>
-    <div class="grid-item">8</div>
-  </div>
-<ul>
     {% for match in player.matches.all %}
-    <li>
-    </li>
+    <div class="grid-container">
+        {% for player in match.players %}
+            <div class="grid-item">player.name</div>
+            <div class="grid-item">match.getTotalPoints(player)</div>
+        {% endfor %}
+    </div>
     {% endfor %}
-</ul>
+
+
 
 
 {% endblock %}
