--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/static/css/style.css
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/static/css/style.css
@@ -50,9 +50,12 @@ li.navBar {
     display: grid;
     grid-auto-flow: column;
     grid-template-rows: auto auto;
-    background-color: gray;
+    grid-template-columns: repeat(2, max(50px, 30vw));
+    background-color: rgb(81, 151, 255);
     padding: 5px;
+    width: max(100px, 60vw);
   }
+  
   .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
     border: 1px solid rgba(0, 0, 0, 0.8);
