Rework of home website structure, more adaptable to different games

--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/base.html
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/base.html
@@ -9,7 +9,7 @@
   
     <!--Navigation bar-->
     <ul class="navBar">
-        <li class="navBar"><a class="navBar" href="{% url 'home' %}">Home</a></li>
+        <li class="navBar"><a class="navBar" href="{% url 'games:gameHome' 1 %}">PrisonersDilemma</a></li>
         <li class="navBar"><a class="navBar" href="accounts/login">Login</a></li>
         <li class="navBar"><a class="navBar" href="accounts/login">Login</a></li>
     </ul>
