--- a/prisonersDilemnaWeb/games/templates/games/gameHome.html
+++ b/prisonersDilemnaWeb/games/templates/games/gameHome.html
@@ -6,7 +6,7 @@
   Hi {{ user.username }}!
   <p>My players</p>
   <ul>
-    {% for player in user.players.all %}
+    {% for player in players %}
       <li>
         <a href = {% url "games:playerDetail" player.id %}>{{player.name}}</a>
       </li>
