--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/base.html
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/base.html
@@ -10,7 +10,7 @@
     <!--Navigation bar-->
     <ul class="navBar">
         <li class="navBar"><a class="navBar" href="{% url 'games:gameHome' 1 %}">PrisonersDilemma</a></li>
-        <li class="navBar"><a class="navBar" href="accounts/login">Login</a></li>
+        <li class="navBar"><a class="navBar" href="{% url 'games:gameHome' 2 %}">Chicken</a></li>
         <li class="navBar"><a class="navBar" href="accounts/login">Login</a></li>
     </ul>
   <main style="margin: 8px;">
