Displaying game name on game home

--- a/prisonersDilemnaWeb/games/templates/games/gameHome.html
+++ b/prisonersDilemnaWeb/games/templates/games/gameHome.html
@@ -4,6 +4,7 @@
 
 {% block content %}
   Hi {{ user.username }}!
+  <h1>{{game.name}}</h1>
   <p>My players</p>
   <ul>
     {% for player in players %}
