added url for match details

--- a/prisonersDilemnaWeb/games/templates/games/gameHome.html
+++ b/prisonersDilemnaWeb/games/templates/games/gameHome.html
@@ -22,5 +22,5 @@
       <a href={% url "games:createNewPlayer" game_id %}>Make new player</a>
     </button>
   </p>
-  <p><a href="{% url 'logout' %}">Log Out</a></p>
+  <p><a href={% url 'logout' %}>Log Out</a></p>
 {% endblock %}
