--- a/prisonersDilemnaWeb/games/templates/games/playerDetail.html
+++ b/prisonersDilemnaWeb/games/templates/games/playerDetail.html
@@ -14,7 +14,7 @@
 <p></p>
 
     {% for match in player.matches.all %}
-    <a href={% url "games:matchDetail" player.pk %}>
+    <a href={% url "games:matchDetail" match.pk %}>
         <div class="grid-container">
             {% for player in match.players.all %}
                 <div class="grid-item">{{player.name}}</div>
