--- a/prisonersDilemnaWeb/games/templates/games/matchDetail.html
+++ b/prisonersDilemnaWeb/games/templates/games/matchDetail.html
@@ -2,7 +2,15 @@
 {% block title %}matchDetail{% endblock %}
 {% block content %}
 {% load my_tags %}
-<h2>Players: {{matchHistory.players.all}}</h2>
+<h2>Players: 
+</h2>
+
+
+{% for player in matchHistory.players.all %}
+<p>
+    {{player.name}}
+</p>
+{%endfor%}
 
 
 {% endblock %}
