--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/static/css/style.css
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/static/css/style.css
@@ -55,6 +55,10 @@ li.navBar {
     padding: 5px;
     width: max(100px, 60vw);
   }
+
+  .grid-container:hover {
+    background-color: rgb(0, 17, 255);
+  }
   
   .grid-item {
     background-color: rgba(255, 255, 255, 0.8);
