--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/static/css/style.css
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/static/css/style.css
@@ -56,6 +56,16 @@ li.navBar {
     width: max(100px, 60vw);
   }
 
+  .one-row-grid-container {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(2, max(50px, 30vw));
+    background-color: rgb(81, 151, 255);
+    padding: 5px;
+    width: max(100px, 60vw);
+  }
+
 #grid-link:hover {
     background-color: rgb(0, 17, 255);
   }
