--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/base.html
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/base.html
@@ -9,9 +9,9 @@
   
     <!--Navigation bar-->
     <ul class="navBar">
+      <li class="navBar"><a class="navBar" href="{% url 'home' %}">Home</a></li>
         <li class="navBar"><a class="navBar" href="{% url 'games:gameHome' 1 %}">PrisonersDilemma</a></li>
         <li class="navBar"><a class="navBar" href="{% url 'games:gameHome' 2 %}">Chicken</a></li>
-        <li class="navBar"><a class="navBar" href="{% url 'logout' %}">Log out</a></li>
     </ul>
   <main style="margin: 8px;">
       {% block baseContent %}
