--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/home.html
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/home.html
@@ -3,5 +3,10 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-  Hi {{ user.username }}!
+  <h1>Home</h1>
+  <h4>Hi {{ user.username }}! Welcome to the code your own player website</h4>
+  <p>This website will allow you to code your own players for games like chicken and the prisoners dilemna,
+    to see game specific instructions, use the navbar at the top to click on any game
+  </p>
+  
 {% endblock %}
