Removed navbar from pages where the user is logged out

--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/homeBase.html
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/homeBase.html
@@ -1,4 +1,4 @@
-{% extends 'registration/base.html' %}
+{% extends 'registration/loggedOutBase.html' %}
 
 {% block baseContent %}
     {% if user.is_authenticated %}
