fixing the base template structures on extending bases

--- a/prisonersDilemnaWeb/games/templates/games/playerDetail.html
+++ b/prisonersDilemnaWeb/games/templates/games/playerDetail.html
@@ -1,4 +1,4 @@
-{% extends 'registration/loggedInBase.html' %}
+{% extends 'registration/base.html' %}
 {% block title %}playerDetail{% endblock %}
 {% block content %}
 {% load my_tags %}
