--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/base.html
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/base.html
@@ -14,7 +14,7 @@
         <li class="navBar"><a class="navBar" href="{% url 'games:gameHome' 2 %}">Chicken</a></li>
     </ul>
   <main style="margin: 8px;">
-      {% block baseContent %}
+      {% block content %}
       {% endblock %}
   </main>
 </body>
