--- a/prisonersDilemnaWeb/games/templates/games/createPlayer.html
+++ b/prisonersDilemnaWeb/games/templates/games/createPlayer.html
@@ -1,4 +1,4 @@
-{% extends 'registration/loggedInBase.html' %}
+{% extends 'registration/base.html' %}
 
 {% block title %}createPlayer{% endblock %}
 
