--- a/prisonersDilemnaWeb/games/templates/games/matchDetail.html
+++ b/prisonersDilemnaWeb/games/templates/games/matchDetail.html
@@ -1,4 +1,4 @@
-{% extends 'registration/loggedInBase.html' %}
+{% extends 'registration/base.html' %}
 {% block title %}matchDetail{% endblock %}
 {% block content %}
 {% load my_tags %}
