Cleaning up view code, matchDetail processing put in ViewProcessor

--- a/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/home.html
+++ b/prisonersDilemnaWeb/prisonersDilemnaWeb/templates/registration/home.html
@@ -8,10 +8,12 @@
     <li class="navBar"><a class="navBar" href="{% url 'games:gameHome' 1 %}">PrisonersDilemma</a></li>
     <li class="navBar"><a class="navBar" href="{% url 'games:gameHome' 2 %}">Chicken</a></li>
 </ul>
+<div  style="margin: 8px;">
   <h1>Home</h1>
   <h4>Hi {{ user.username }}! Welcome to the code your own player website</h4>
   <p>This website will allow you to code your own players for games like chicken and the prisoners dilemna,
     to see game specific instructions, use the navbar at the top to click on any game
   </p>
+</div>
   
 {% endblock %}
